[tool.poetry]
name = "blog-agent"
version = "0.1.0"
description = ""
authors = ["Henrique Martinelli <henrique.martinelli@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
openai = "^1.68.2"
httpx = "^0.28.1"
pydantic-settings = "^2.8.1"
pytrends = "^4.9.0"
gunicorn = "^23.0.0"
aiohttp = "^3.11.14"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
taskipy = "^1.14.1"
pytrends = "^4.9.0"
gunicorn = "^23.0.0"



[tool.taskipy.tasks]
dev = { cmd = "uvicorn app:app --reload", help = "Start API in development mode" }
up = { cmd = "gunicorn app:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000 --name blog-agent-api", help = "Start API with Gunicorn in prod mode" }
test = { cmd = "pytest", help = "Run tests" }
format = { cmd = "black . && isort .", help = "Format code" }
check = { cmd = "mypy app", help = "Run type checks" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
